ffigen/LabSoundHelper.h

typedef struct AudioStreamConfig {
    int32_t device_index;
    uint32_t desired_channels;
    float desired_samplerate;
} AudioStreamConfig;
void PannerNode_setConeInnerAngle(int nodeId, float angle);
float PannerNode_coneOuterAngle(int nodeId);
void PannerNode_setConeOuterAngle(int nodeId, float angle);
float PannerNode_coneOuterGain(int nodeId);
void PannerNode_setConeOuterGain(int nodeId, float angle);
void PannerNode_getAzimuthElevation(int nodeId, AudioContext* context, double * outAzimuth, double * outElevation);
void PannerNode_dopplerRate(int nodeId, AudioContext* context);
///////////////////////////
/// ChannelSplitterNode ///
///////////////////////////
int createChannelSplitterNode(AudioContext* context);
void ChannelSplitterNode_addOutputs(int nodeId, int n);
/////////////////////////
/// ChannelMergerNode ///
/////////////////////////

int createChannelMergerNode(AudioContext* context);
void ChannelMergerNode_addInputs(int nodeId, int n);
void ChannelMergerNode_setOutputChannelCount(int nodeId, int n);
///////////////////////////////
/// AudioHardwareDeviceNode ///
///////////////////////////////

int createAudioHardwareDeviceNode(AudioContext* context, const AudioStreamConfig outputConfig, const AudioStreamConfig inputConfig);
void AudioHardwareDeviceNode_start(int nodeId);
void AudioHardwareDeviceNode_stop(int nodeId);
int AudioHardwareDeviceNode_isRunning(int nodeId);
AudioStreamConfig AudioHardwareDeviceNode_getOutputConfig(int nodeId);
AudioStreamConfig AudioHardwareDeviceNode_getInputConfig(int nodeId);
AudioStreamConfig createAudioStreamConfig(int device_index, uint32_t desired_channels, float desired_samplerate );
void AudioHardwareDeviceNode_backendReinitialize(int nodeId);
//////////////////////////////
/// DynamicsCompressorNode ///
//////////////////////////////

int createDynamicsCompressorNode(AudioContext* context);
// Static compression curve parameters.
int DynamicsCompressorNode_threshold(int nodeId);
int DynamicsCompressorNode_knee(int nodeId);