lib/src/generated_bindings.dart


  void PannerNode_setConeInnerAngle(
    int nodeId,
    double angle,
  ) {
    return _PannerNode_setConeInnerAngle(
      nodeId,
      angle,
    );
  }

  late final _PannerNode_setConeInnerAngle_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_setConeInnerAngle>>(
          'PannerNode_setConeInnerAngle');
  late final _dart_PannerNode_setConeInnerAngle _PannerNode_setConeInnerAngle =
      _PannerNode_setConeInnerAngle_ptr.asFunction<
          _dart_PannerNode_setConeInnerAngle>();

  double PannerNode_coneOuterAngle(
    int nodeId,
  ) {
    return _PannerNode_coneOuterAngle(
      nodeId,
    );
  }

  late final _PannerNode_coneOuterAngle_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_coneOuterAngle>>(
          'PannerNode_coneOuterAngle');
  late final _dart_PannerNode_coneOuterAngle _PannerNode_coneOuterAngle =
      _PannerNode_coneOuterAngle_ptr.asFunction<
          _dart_PannerNode_coneOuterAngle>();

  void PannerNode_setConeOuterAngle(
    int nodeId,
    double angle,
  ) {
    return _PannerNode_setConeOuterAngle(
      nodeId,
      angle,
    );
  }

  late final _PannerNode_setConeOuterAngle_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_setConeOuterAngle>>(
          'PannerNode_setConeOuterAngle');
  late final _dart_PannerNode_setConeOuterAngle _PannerNode_setConeOuterAngle =
      _PannerNode_setConeOuterAngle_ptr.asFunction<
          _dart_PannerNode_setConeOuterAngle>();

  double PannerNode_coneOuterGain(
    int nodeId,
  ) {
    return _PannerNode_coneOuterGain(
      nodeId,
    );
  }

  late final _PannerNode_coneOuterGain_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_coneOuterGain>>(
          'PannerNode_coneOuterGain');
  late final _dart_PannerNode_coneOuterGain _PannerNode_coneOuterGain =
      _PannerNode_coneOuterGain_ptr.asFunction<
          _dart_PannerNode_coneOuterGain>();

  void PannerNode_setConeOuterGain(
    int nodeId,
    double angle,
  ) {
    return _PannerNode_setConeOuterGain(
      nodeId,
      angle,
    );
  }

  late final _PannerNode_setConeOuterGain_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_setConeOuterGain>>(
          'PannerNode_setConeOuterGain');
  late final _dart_PannerNode_setConeOuterGain _PannerNode_setConeOuterGain =
      _PannerNode_setConeOuterGain_ptr.asFunction<
          _dart_PannerNode_setConeOuterGain>();

  void PannerNode_getAzimuthElevation(
    int nodeId,
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Double> outAzimuth,
    ffi.Pointer<ffi.Double> outElevation,
  ) {
    return _PannerNode_getAzimuthElevation(
      nodeId,
      context,
      outAzimuth,
      outElevation,
    );
  }

  late final _PannerNode_getAzimuthElevation_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_getAzimuthElevation>>(
          'PannerNode_getAzimuthElevation');
  late final _dart_PannerNode_getAzimuthElevation
      _PannerNode_getAzimuthElevation = _PannerNode_getAzimuthElevation_ptr
          .asFunction<_dart_PannerNode_getAzimuthElevation>();

  void PannerNode_dopplerRate(
    int nodeId,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _PannerNode_dopplerRate(
      nodeId,
      context,
    );
  }

  late final _PannerNode_dopplerRate_ptr =
      _lookup<ffi.NativeFunction<_c_PannerNode_dopplerRate>>(
          'PannerNode_dopplerRate');
  late final _dart_PannerNode_dopplerRate _PannerNode_dopplerRate =
      _PannerNode_dopplerRate_ptr.asFunction<_dart_PannerNode_dopplerRate>();

  /// ////////////////////////
  /// ChannelSplitterNode ///
  /// ////////////////////////
  int createChannelSplitterNode(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _createChannelSplitterNode(
      context,
    );
  }

  late final _createChannelSplitterNode_ptr =
      _lookup<ffi.NativeFunction<_c_createChannelSplitterNode>>(
          'createChannelSplitterNode');
  late final _dart_createChannelSplitterNode _createChannelSplitterNode =
      _createChannelSplitterNode_ptr
          .asFunction<_dart_createChannelSplitterNode>();

  void ChannelSplitterNode_addOutputs(
    int nodeId,
    int n,
  ) {
    return _ChannelSplitterNode_addOutputs(
      nodeId,
      n,
    );
  }

  late final _ChannelSplitterNode_addOutputs_ptr =
      _lookup<ffi.NativeFunction<_c_ChannelSplitterNode_addOutputs>>(
          'ChannelSplitterNode_addOutputs');
  late final _dart_ChannelSplitterNode_addOutputs
      _ChannelSplitterNode_addOutputs = _ChannelSplitterNode_addOutputs_ptr
          .asFunction<_dart_ChannelSplitterNode_addOutputs>();

  /// //////////////////////
  /// ChannelMergerNode ///
  /// //////////////////////
  int createChannelMergerNode(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _createChannelMergerNode(
      context,
    );
  }

  late final _createChannelMergerNode_ptr =
      _lookup<ffi.NativeFunction<_c_createChannelMergerNode>>(
          'createChannelMergerNode');
  late final _dart_createChannelMergerNode _createChannelMergerNode =
      _createChannelMergerNode_ptr.asFunction<_dart_createChannelMergerNode>();

  void ChannelMergerNode_addInputs(
    int nodeId,
    int n,
  ) {
    return _ChannelMergerNode_addInputs(
      nodeId,
      n,
    );
  }

  late final _ChannelMergerNode_addInputs_ptr =
      _lookup<ffi.NativeFunction<_c_ChannelMergerNode_addInputs>>(
          'ChannelMergerNode_addInputs');
  late final _dart_ChannelMergerNode_addInputs _ChannelMergerNode_addInputs =
      _ChannelMergerNode_addInputs_ptr.asFunction<
          _dart_ChannelMergerNode_addInputs>();

  void ChannelMergerNode_setOutputChannelCount(
    int nodeId,
    int n,
  ) {
    return _ChannelMergerNode_setOutputChannelCount(
      nodeId,
      n,
    );
  }

  late final _ChannelMergerNode_setOutputChannelCount_ptr =
      _lookup<ffi.NativeFunction<_c_ChannelMergerNode_setOutputChannelCount>>(
          'ChannelMergerNode_setOutputChannelCount');
  late final _dart_ChannelMergerNode_setOutputChannelCount
      _ChannelMergerNode_setOutputChannelCount =
      _ChannelMergerNode_setOutputChannelCount_ptr.asFunction<
          _dart_ChannelMergerNode_setOutputChannelCount>();

  /// ////////////////////////////
  /// AudioHardwareDeviceNode ///
  /// ////////////////////////////
  int createAudioHardwareDeviceNode(
    ffi.Pointer<ffi.Void> context,
    AudioStreamConfig outputConfig,
    AudioStreamConfig inputConfig,
  ) {
    return _createAudioHardwareDeviceNode(
      context,
      outputConfig,
      inputConfig,
    );
  }

  late final _createAudioHardwareDeviceNode_ptr =
      _lookup<ffi.NativeFunction<_c_createAudioHardwareDeviceNode>>(
          'createAudioHardwareDeviceNode');
  late final _dart_createAudioHardwareDeviceNode
      _createAudioHardwareDeviceNode = _createAudioHardwareDeviceNode_ptr
          .asFunction<_dart_createAudioHardwareDeviceNode>();

  void AudioHardwareDeviceNode_start(
    int nodeId,
  ) {
    return _AudioHardwareDeviceNode_start(
      nodeId,
    );
  }

  late final _AudioHardwareDeviceNode_start_ptr =
      _lookup<ffi.NativeFunction<_c_AudioHardwareDeviceNode_start>>(
          'AudioHardwareDeviceNode_start');
  late final _dart_AudioHardwareDeviceNode_start
      _AudioHardwareDeviceNode_start = _AudioHardwareDeviceNode_start_ptr
          .asFunction<_dart_AudioHardwareDeviceNode_start>();

  void AudioHardwareDeviceNode_stop(
    int nodeId,
  ) {
    return _AudioHardwareDeviceNode_stop(
      nodeId,
    );
  }

  late final _AudioHardwareDeviceNode_stop_ptr =
      _lookup<ffi.NativeFunction<_c_AudioHardwareDeviceNode_stop>>(
          'AudioHardwareDeviceNode_stop');
  late final _dart_AudioHardwareDeviceNode_stop _AudioHardwareDeviceNode_stop =
      _AudioHardwareDeviceNode_stop_ptr.asFunction<
          _dart_AudioHardwareDeviceNode_stop>();

  int AudioHardwareDeviceNode_isRunning(
    int nodeId,
  ) {
    return _AudioHardwareDeviceNode_isRunning(
      nodeId,
    );
  }

  late final _AudioHardwareDeviceNode_isRunning_ptr =
      _lookup<ffi.NativeFunction<_c_AudioHardwareDeviceNode_isRunning>>(
          'AudioHardwareDeviceNode_isRunning');
  late final _dart_AudioHardwareDeviceNode_isRunning
      _AudioHardwareDeviceNode_isRunning =
      _AudioHardwareDeviceNode_isRunning_ptr.asFunction<
          _dart_AudioHardwareDeviceNode_isRunning>();

  AudioStreamConfig AudioHardwareDeviceNode_getOutputConfig(
    int nodeId,
  ) {
    return _AudioHardwareDeviceNode_getOutputConfig(
      nodeId,
    );
  }

  late final _AudioHardwareDeviceNode_getOutputConfig_ptr =
      _lookup<ffi.NativeFunction<_c_AudioHardwareDeviceNode_getOutputConfig>>(
          'AudioHardwareDeviceNode_getOutputConfig');
  late final _dart_AudioHardwareDeviceNode_getOutputConfig
      _AudioHardwareDeviceNode_getOutputConfig =
      _AudioHardwareDeviceNode_getOutputConfig_ptr.asFunction<
          _dart_AudioHardwareDeviceNode_getOutputConfig>();

  AudioStreamConfig AudioHardwareDeviceNode_getInputConfig(
    int nodeId,
  ) {
    return _AudioHardwareDeviceNode_getInputConfig(
      nodeId,
    );
  }

  late final _AudioHardwareDeviceNode_getInputConfig_ptr =
      _lookup<ffi.NativeFunction<_c_AudioHardwareDeviceNode_getInputConfig>>(
          'AudioHardwareDeviceNode_getInputConfig');
  late final _dart_AudioHardwareDeviceNode_getInputConfig
      _AudioHardwareDeviceNode_getInputConfig =
      _AudioHardwareDeviceNode_getInputConfig_ptr.asFunction<
          _dart_AudioHardwareDeviceNode_getInputConfig>();

  AudioStreamConfig createAudioStreamConfig(
    int device_index,
    int desired_channels,
    double desired_samplerate,
  ) {
    return _createAudioStreamConfig(
      device_index,
      desired_channels,
      desired_samplerate,
    );
  }

  late final _createAudioStreamConfig_ptr =
      _lookup<ffi.NativeFunction<_c_createAudioStreamConfig>>(
          'createAudioStreamConfig');
  late final _dart_createAudioStreamConfig _createAudioStreamConfig =
      _createAudioStreamConfig_ptr.asFunction<_dart_createAudioStreamConfig>();

  void AudioHardwareDeviceNode_backendReinitialize(
    int nodeId,
  ) {
    return _AudioHardwareDeviceNode_backendReinitialize(
      nodeId,
    );
  }

  late final _AudioHardwareDeviceNode_backendReinitialize_ptr = _lookup<
          ffi.NativeFunction<_c_AudioHardwareDeviceNode_backendReinitialize>>(
      'AudioHardwareDeviceNode_backendReinitialize');
  late final _dart_AudioHardwareDeviceNode_backendReinitialize
      _AudioHardwareDeviceNode_backendReinitialize =
      _AudioHardwareDeviceNode_backendReinitialize_ptr.asFunction<
          _dart_AudioHardwareDeviceNode_backendReinitialize>();

  /// ///////////////////////////
  /// DynamicsCompressorNode ///
  /// ///////////////////////////
  int createDynamicsCompressorNode(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _createDynamicsCompressorNode(
      context,
    );
  }

  late final _createDynamicsCompressorNode_ptr =
      _lookup<ffi.NativeFunction<_c_createDynamicsCompressorNode>>(
          'createDynamicsCompressorNode');
  late final _dart_createDynamicsCompressorNode _createDynamicsCompressorNode =
      _createDynamicsCompressorNode_ptr
          .asFunction<_dart_createDynamicsCompressorNode>();

  int DynamicsCompressorNode_threshold(
    int nodeId,
  ) {
    return _DynamicsCompressorNode_threshold(
      nodeId,
    );
  }

  late final _DynamicsCompressorNode_threshold_ptr =
      _lookup<ffi.NativeFunction<_c_DynamicsCompressorNode_threshold>>(
          'DynamicsCompressorNode_threshold');
  late final _dart_DynamicsCompressorNode_threshold
      _DynamicsCompressorNode_threshold = _DynamicsCompressorNode_threshold_ptr
          .asFunction<_dart_DynamicsCompressorNode_threshold>();

  int DynamicsCompressorNode_knee(
    int nodeId,
  ) {
    return _DynamicsCompressorNode_knee(
      nodeId,
    );
  }
